services/demo-v118/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-v118
  labels:
    name: demo-v118
    app: demo-v118
