services/demo-v118/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-v118
  namespace: demo-v118
  labels:
    app: demo-v118
    version: v1.0.0
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: demo-v118
  template:
    metadata:
      labels:
        app: demo-v118
        version: v1.0.0
      annotations:
        argocd.argoproj.io/sync-wave: "0"
        timestamp: "1760331233"
        deployment.kubernetes.io/revision: "1"
    spec:
      containers:
      - name: demo-v118
        image: ghcr.io/ductri09072004/demo-v118:1761102455
        imagePullPolicy: Always
        ports:
        - containerPort: 5005
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        livenessProbe:
          tcpSocket:
            port: 5005
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 5005
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
