services/demo-v118/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v118-service
  namespace: demo-v118
  labels:
    app: demo-v118
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5005
    protocol: TCP
    name: http
  selector:
    app: demo-v118
